--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="section-container">
                 <p class="section-title">LISTSERV</p>
                 <p class="content">
-                    If you would like to join the listserv please click on this link. /*or maybe a form here that allows visitor to submit email*/
+                    If you would like to join the listserv please click on <a href="https://goo.gl/forms/TBq1rXfTRNTZQtMv1">this link.</a>
                 </p>
             </div>
         </div>
