removed part with events

--- a/index.html
+++ b/index.html
@@ -32,24 +32,7 @@
         <div id="upcoming" class="main-section">
             <div class="section-container">
                 <p class="section-title">UPCOMING EVENTS</p>
-
-                <!-- Events List -->
-                <ul id="event-list">
-                    <li>
-                        <p class="event-title">Event Title</p>
-                        <p class="event-date">12-34-56</p>
-                        <p class="event-description">
-                            Event description goes here. Event description goes here. Event description goes here. Event description goes here. Event description goes here. Event description goes here. Event description goes here. Event description goes here.
-                        </p>
-                    </li>
-                    <li>
-                        <p class="event-title">Yet Another Event Title</p>
-                        <p class="event-date">12-34-56</p>
-                        <p class="event-description">
-                            Event description goes here. Event description goes here. Event description goes here. Event description goes here. Event description goes here. Event description goes here. Event description goes here. Event description goes here.
-                        </p>
-                    </li>
-                </ul>
+                <p>TODO add google calendar here</p>
             </div>
         </div>
 
